--- a/exocore/data/user.yml
+++ b/exocore/data/user.yml
@@ -3,7 +3,7 @@
 # You can edit this file to change your user details
 
 # The name displayed on your profile card:
-user_name: Remilia Corporation
+user_name: exHuman
 
 
 # The URL that your name will point to ('/' means home):
@@ -11,11 +11,11 @@ profile_link: /
 
 
 # The user image displayed on your profile card. You can edit this by dropping an image with the name 'pfp.png' into 'assets/imgs', or editing the path below:
-profile_pic: assets/imgs/pfp.png
+profile_pic: https://i.seadn.io/gcs/files/e3409a01a7ee012472603c467d68240f.png?auto=format&dpr=1&w=1000
 
 
 # The header that will be displayed on your homepage:
-welcome_header: Welcome to the Exocore
+welcome_header: Mój internetowy pamiętnik
 
 
 # The subtitle to the above header on your homepage:
