--- a/exocore/data/user.yml
+++ b/exocore/data/user.yml
@@ -3,7 +3,7 @@
 # You can edit this file to change your user details
 
 # The name displayed on your profile card:
-user_name: 8888888
+user_name: Research Core
 
 
 # The URL that your name will point to ('/' means home):
@@ -15,7 +15,7 @@ profile_pic:
 
 
 # The header that will be displayed on your homepage:
-welcome_header: internetowy pamiętnik 8888888
+welcome_header: tworzę bezpieczne miejsce w polu energo-informacyjnym -- Research Core 
 
 
 # The subtitle to the above header on your homepage:
