--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # --- USER CONFIGURATION --- #
 ##############################
 
-title: Exocore
+title: Research Core
 description: A navigable, organised hypertext personal knowledge base
-url: https://exocore.netlify.app
+url: https://8888888.netlify.app
 repository: remiliacorp/exocore
 
 ##############################################
