--- a/exocore/data/user.yml
+++ b/exocore/data/user.yml
@@ -11,15 +11,15 @@ profile_link: /
 
 
 # The user image displayed on your profile card. You can edit this by dropping an image with the name 'pfp.png' into 'assets/imgs', or editing the path below:
-profile_pic: 
+profile_pic: pfp.png
 
 
 # The header that will be displayed on your homepage:
-welcome_header: tworzę bezpieczne miejsce w polu energo-informacyjnym -- Research Core 
+welcome_header: tworzę bezpieczne miejsce w polu energo-informacyjnym
 
 
 # The subtitle to the above header on your homepage:
-welcome_subtitle: zorganizowany hypertekst 
+welcome_subtitle: zorganizowany hypertekst, przyśpieszony umysł
 
 
 # Include the Viral Public License at the bottom of your posts (Accepts true/false). Read more about the VPL at https://viralpubliclicense.org.
